--- a/views/word_definitions_form.erb
+++ b/views/word_definitions_form.erb
@@ -5,6 +5,7 @@
     <label for="description">The definition</label>
     <input id="description" name="desctiption" type="text"><br>
 
-    <label for="partofspeech">The part of speech</label>
+     <label for="partofspeech">The part of speech</label>
     <input id="partofspeech" name="partofspeech" type="text" placeholder="Enter: noun, verb, adjective, adverb, interjection">
+    <button type="submit">Add definition</button>
 </form>
