--- a/views/words_form.erb
+++ b/views/words_form.erb
@@ -2,7 +2,7 @@
 
 <p>Add your new word here:</p>
 
-<form action="/" method="post">
+<form action="/words" method="post">
   <label for "name">Your Word</label>
   <input id = "name" name = "name" type = "text">
   <button type = "submit" class = "btn-success">Add Word</button>
