style pages with pictures and jumbotron

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,6 +13,11 @@
   </head>
   <body>
     <div class="container">
+      <div class="jumbotron">
+        <h1>Your Very Own Dictionary</h1><img src="img/dictionary.jpeg" alt="picture of a page from a dictionary" />
+      </div>
+    </div>
+    <div class ="container">
     <%= yield %>
     </div>
   </body>
