--- a/views/word_definitions_form.erb
+++ b/views/word_definitions_form.erb
@@ -1,9 +1,9 @@
-<h2><Add a definition to<%= @word.name()%></h1>
+<h2><Add a definition to<%= @word.name()%>></h1>
 <form action="/definitions" method="post">
-    <input id="word_id" name="word_id" type="hidden" value='<%= @dealership.id()%>'>
+    <input id="word_id" name="word_id" type="hidden" value='<%= @word.id()%>'>
 
     <label for="description">The definition</label>
-    <input id="description" name="desctiption" type="text"><br>
+    <input id="description" name="description" type="text"><br>
 
      <label for="partofspeech">The part of speech</label>
     <input id="partofspeech" name="partofspeech" type="text" placeholder="Enter: noun, verb, adjective, adverb, interjection">
