--- a/views/words_form.erb
+++ b/views/words_form.erb
@@ -4,6 +4,6 @@
 
 <form action="/words" method="post">
   <label for "name">Your Word</label>
-  <input id = "name" name = "name" type = "text">
-  <button type = "submit" class = "btn-success">Add Word</button>
+  <input class="form-control" id = "name" name = "name" type = "text"><br>
+  <button type="submit" class="btn-success">Add Word</button>
 </form>
