--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,9 +14,9 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Your Very Own Dictionary</h1><img src="img/dictionary.jpeg" alt="picture of a page from a dictionary" />
+        <h1>Your Very Own Dictionary</h1>
       </div>
-    </div>
+    <div>
     <div class ="container">
     <%= yield %>
     </div>
