--- a/views/sucess.erb
+++ b/views/sucess.erb
@@ -1,3 +1,3 @@
 <h1 class = "title">Success!</h1>
-<img src="img/success.png" alt="" />
+<img id="success" src="img/success.png" alt="" />
 <a href = "/">Go Back to Your Words</a>
