--- a/views/word_definitions_form.erb
+++ b/views/word_definitions_form.erb
@@ -3,9 +3,9 @@
     <input id="word_id" name="word_id" type="hidden" value='<%= @word.id()%>'>
 
     <label for="description">The definition</label>
-    <input id="description" name="description" type="text"><br>
+    <input class="form-control" id="description" name="description" type="text"><br>
 
      <label for="partofspeech">The part of speech</label>
-    <input id="partofspeech" name="partofspeech" type="text" placeholder="Enter: noun, verb, adjective, adverb, interjection">
-    <button type="submit">Add definition</button>
+    <input class="form-control" id="partofspeech" name="partofspeech" type="text" placeholder="Enter: noun, verb, adjective, adverb, interjection"><br>
+    <button class="btn-success" type="submit">Add definition</button>
 </form>
