--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,7 @@
- <h3>Your Word Entries</h3>
+<h3>Your Word Entries</h3>
 <ul>
   <% @words.each() do |word| %>
     <li><a href="/words/<%=word.id() %>"><%= word.name() %></a></li>
   <% end %>
 </ul>
-
-<h3>Add a word here</h3>
-<a href="/words/new" id='add-word'>Add a New Word</a>
+<h3><a href="/words/new" id='add-word'>Add a New Word</a></h3>
